--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
+    "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "vee-validate": "^3",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
