reset password option

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.8",
+    "apexcharts": "^3.35.3",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vee-validate": "^3",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
